--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "lowdb": "^3.0.0"
+    "lowdb": "^3.0.0",
+    "method-override": "^3.0.0"
   }
 }
