--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/iBichos/app#readme",
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
@@ -26,5 +27,11 @@
     "express-session": "^1.17.3",
     "lowdb": "^3.0.0",
     "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.3",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
