--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "lowdb": "^3.0.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
