--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   "homepage": "https://github.com/iBichos/app#readme",
   "dependencies": {
     "@prisma/client": "^4.0.0",
+    "aws-sdk": "^2.1171.0",
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "lowdb": "^3.0.0",
     "method-override": "^3.0.0",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
