--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "prisma": "^4.0.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
